Demonstrate use with contenteditable

--- a/save-back-examples.html
+++ b/save-back-examples.html
@@ -17,6 +17,10 @@ href="https://addons.mozilla.org/en-US/firefox/addon/save-back-to-file-from-dom/
   <li>Pool Table <a
     href="save-back-ex-002-pool-table.svg">save-back-ex-002-pool-table.svg</a>
     drag balls on pool table</li>
+  <li>Editable Text <a
+    href="save-back-ex-003-content-editable.html">save-back-ex-003-content-editable.html</a>
+    edit text in a <code>&lt;div</code> with
+    <code>contenteditable="true"</code>.</li>
 </ul>
 
 <p><b>How to use:</b> Store (save) these files on your local file system
