--- a/save-back-examples.html
+++ b/save-back-examples.html
@@ -27,8 +27,7 @@ href="https://addons.mozilla.org/en-US/firefox/addon/save-back-to-file-from-dom/
 (disk). Open them from there. Makes changes (by using your mouse to click or to
 drag). Save back to file by using <a
 href="https://addons.mozilla.org/en-US/firefox/addon/save-back-to-file-from-dom/">Save
-Back to File from DOM</a>. Open again to see the changes have been
-saved.<a></a></p>
+Back to File from DOM</a>. Open again to see changes have been saved.<a></a></p>
 
 <p style="font-size:smaller">Idea and first implementation by Leo Baschy and
 Hans Baschy.</p>
